--- a/_site.yml
+++ b/_site.yml
@@ -16,5 +16,7 @@ navbar:
       href: other_writings.html
     - text: "About"
       href: about.html
-output: distill::distill_article
+output:
+  distill::distill_article:
+    css: mmstyle.css
 base_url: https://milesmcbain.xyz
