--- a/_site.yml
+++ b/_site.yml
@@ -21,4 +21,4 @@ navbar:
 output:
   distill::distill_article:
     css: mmstyle.css
-base_url: https://milesmcbain.xyz
+base_url: https://milesmcbain.com
