--- a/_site.yml
+++ b/_site.yml
@@ -23,6 +23,8 @@ navbar:
 output:
   distill::distill_article:
     css: mmstyle.css
+    includes:
+      in_header: utterances.html
 base_url: https://milesmcbain.com
 repository_url: https://www.github.com/milesmcbain/website_distill
 favicon: images/favicon.ico
@@ -32,4 +34,4 @@ twitter:
 collections:
   posts:
     disqus:
-      shortname: milesmcbainxyz
+      # shortname: milesmcbainxyz
